Linked CSS & Scripts

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <link rel="stylesheet" href="dist/styles/main.css" media="screen">
     </head>
     <body>
-        Booyah!
+        Content Goes Here
+        <script src="dist/scripts/main.js"></script>
     </body>
 </html>
